feat(app stats): added uploads and albums
